# manul

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  manul.yml
example/: Cargo.toml
example/src/: lib.rs  rounds.rs  simple.rs  simple_malicious.rs
example/tests/: async.rs
examples/: Cargo.toml  GUIDE.md  LICENSE  README.md  dining_cryptographers.rs
examples/src/: dining_cryptographers.rs  format.rs  lib.rs  simple.rs  simple_chain.rs  simple_malicious.rs  simple_test.rs
examples/tests/: async.rs  async_runner.rs
manul/: Cargo.toml  GUIDE.md
manul/benches/: async_session.rs  empty_rounds.rs
manul/src/: combinators.rs  dev.rs  echo.rs  error.rs  evidence.rs  lib.rs  message.rs  object_safe.rs  protocol.rs  round.rs  serde_bytes.rs  session.rs  signing.rs  signing_rustcrypto.rs  test_utils.rs  testing.rs  tests.rs  transcript.rs  utils.rs
manul/src/combinators/: chain.rs  markers.rs  misbehave.rs
manul/src/dev/: extend.rs  misbehave.rs  run_sync.rs  session_parameters.rs  tokio.rs
manul/src/protocol/: boxed_format.rs  boxed_round.rs  dyn_evidence.rs  dyn_round.rs  error.rs  errors.rs  evidence.rs  message.rs  object_safe.rs  rng.rs  round.rs  round_id.rs  round_info.rs  serialization.rs  static_round.rs  wire_format.rs
manul/src/session/: echo.rs  evidence.rs  format.rs  message.rs  session.rs  signing.rs  signing_rustcrypto.rs  tokio.rs  transcript.rs  wire_format.rs
manul/src/testing/: format.rs  identity.rs  macros.rs  run_sync.rs  wire_format.rs
manul/src/tests/: partial_echo.rs
manul/src/utils/: serializable_map.rs  traits.rs  type_id.rs
src/: error.rs  lib.rs  message.rs  round.rs  session.rs  test_utils.rs
tests/: example.rs
