[package]
name = "manul-example"
version = "0.0.0"
edition = "2021"
authors = ['Entropy Cryptography <engineering@entropy.xyz>']
license = "MIT"
description = "Examples of usage for `manul` crate"
repository = "https://github.com/entropyxyz/manul/examples"
readme = "README.md"

[dependencies]
manul = { path = "../manul" }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["alloc", "serde"] }
serde = "1"
sha3 = "0.10"
k256 = "0.13"
rand_core = "0.6"
