[package]
name = "manul-example"
version = "0.0.0"
edition = "2021"
authors = ['Entropy Cryptography <engineering@entropy.xyz>']
license = "MIT"
description = "Examples of usage for `manul` crate"
repository = "https://github.com/entropyxyz/manul/examples"
readme = "README.md"

[dependencies]
manul = { path = "../manul" }
postcard = { version = "1", features = ["alloc"] }
serde = "1"
sha3 = "0.10"
rand_core = "0.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
rand = "0.8"
digest = "0.10"
manul = { path = "../manul", features = ["testing"] }
