[package]
name = "manul-example"
version = "0.0.0"
edition = "2021"
authors = ['Entropy Cryptography <engineering@entropy.xyz>']
license = "MIT"
description = "Usage examples for the `manul` crate"
repository = "https://github.com/entropyxyz/manul/examples"
readme = "README.md"

[dependencies]
manul = { path = "../manul", features = ["dev"] }
postcard = { version = "1", features = ["alloc"] }
serde = "1"
sha3 = "0.10"
rand_core = { version = "0.6.4", default-features = false, features = ["getrandom"] }
tracing = "0.1"
displaydoc = "0.2"
tracing-subscriber = "0.3"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
digest = "0.10"
manul = { path = "../manul", features = ["dev", "tokio"] }
test-log = { version = "0.2", features = ["trace", "color"] }

[[bin]]
name = "dining-cryptographers"
path = "dining_cryptographers.rs"
