[package]
name = "manul"
version = "0.2.0-dev"
edition = "2021"
rust-version = "1.85"
authors = ['Entropy Cryptography <engineering@entropy.xyz>']
license = "AGPL-3.0-or-later"
description = "Generic library for round-based protocols"
repository = "https://github.com/entropyxyz/manul"
readme = "README.md"
categories = ["cryptography", "no-std"]

[dependencies]
serde = { version = "1", default-features = false, features = ["alloc", "serde_derive"] }
erased-serde = { version = "0.4", default-features = false, features = ["alloc"] }
serde-encoded-bytes = { version = "0.1", default-features = false, features = ["hex", "base64"] }
digest = { version = "0.11.0-pre.9", default-features = false }
signature = { version = "2.3.0-pre.6", default-features = false, features = ["digest", "rand_core"] }
rand_core = { version = "0.9", default-features = false }
tracing = { version = "0.1", default-features = false }
displaydoc = { version = "0.2", default-features = false }
derive-where = "1"
tinyvec = { version = "1", default-features = false, features = ["alloc", "serde"] }

# Optional dependencies
rand = { version = "0.9", default-features = false, optional = true }
serde-persistent-deserializer = { version = "0.3", optional = true }
postcard = { version = "1", default-features = false, features = ["alloc"], optional = true }
serde_json = { version = "1", default-features = false, features = ["alloc"], optional = true }
tokio = { version = "1", default-features = false, features = ["sync", "rt", "macros", "time"], optional = true }

[dev-dependencies]
rand_core = { version = "0.9", default-features = false, features = ["os_rng"] }
impls = "1"
serde_asn1_der = "0.8"
criterion = "0.5"

# These mirror the versions from the optional dependencies above.
rand = { version = "0.9", default-features = false }
serde-persistent-deserializer = "0.3"
postcard = { version = "1", default-features = false, features = ["alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }

[features]
dev = ["rand", "postcard", "serde_json", "tracing/std", "serde-persistent-deserializer"]
tokio = ["dep:tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "empty_rounds"
harness = false
required-features = ["dev"]

[[bench]]
name = "async_session"
harness = false
required-features = ["dev", "tokio"]
